--- a/app/src/main/res/layout/chi_tiet_san_pham.xml
+++ b/app/src/main/res/layout/chi_tiet_san_pham.xml
@@ -27,4 +27,15 @@
         android:layout_weight="1"
         android:text="Quantity" />
 
+    <Button
+        android:id="@+id/btnEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Edit" />
+
+    <Button
+        android:id="@+id/btnDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete" />
 </LinearLayout>
